<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Setup</string>
    <string name="action_settings">Settings</string>
    <string name="textview2">Device Information</string>
    <string name="textview1"> -- empty -- </string>
    <string name="scan_qr_code">Scan QR Code</string> 
	<string name="start_easy_setup">Start Easy Setup</string> 
	<string name="start_soft_ap">Start Wi-Fi Soft AP</string>
	<string name="stop_soft_ap">Stop Soft AP</string>  
    <string name="provision_device">Provision Connected Device</string>    
    
	<string name="capture_name">QR Code Capture</string>
	<string name="encoder_name">QR Code Encoder</string>
	<string name="decoder_name">QR Code Decoder</string>
	
	<string name="contents_contact">Contact info</string>
	<string name="contents_email">Email address</string>
	<string name="contents_location">Geographic coordinates</string>
	<string name="contents_phone">Phone number</string>
	<string name="contents_sms">SMS address</string>
	<string name="contents_text">Plain text</string>
	
	<string name="msg_default_contents">Contents</string>
	<string name="msg_default_format">Format</string>
	<string name="msg_default_meta">Metadata</string>
	<string name="msg_default_mms_subject">Hi</string>
	<string name="msg_default_status">Place a QR code inside the viewfinder rectangle to scan it.</string>
	<string name="msg_default_time">Time</string>
	<string name="msg_default_type">Type</string>
	
	<string name="result_address_book">Found contact info</string>
	<string name="result_calendar">Found calendar event</string>
	<string name="result_email_address">Found email address</string>
	<string name="result_geo">Found geographic coordinates</string>
	<string name="result_isbn">Found book</string>
	<string name="result_product">Found product</string>
	<string name="result_sms">Found SMS address</string>
	<string name="result_tel">Found phone number</string>
	<string name="result_text">Found plain text</string>
	<string name="result_uri">Found URL</string>
	<string name="result_wifi">Found WLAN Configuration</string>
	
	<string name="wifi_changing_network">Changing Network</string>
	<string name="wifi_ssid_label">Network Name</string>
	<string name="wifi_type_label">Type</string>
	
	<string name="barcode_image">Barcode Image</string>

</resources>
