<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.iotivity.service.easysetup.mediator.MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:elegantTextHeight="true"
        android:text="@string/start_soft_ap"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:elegantTextHeight="true"
        android:text="@string/provision_device"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/stopapbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:elegantTextHeight="true"
        android:text="@string/stop_soft_ap"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/stopapbutton"
        android:layout_marginTop="43dp"
        android:text="@string/textview1"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/stopapbutton"
        android:layout_marginTop="16dp"
        android:text="@string/textview2"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>